# fastfits

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  fits.rs  main.rs
