[package]
name = "fastfits"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Paul Praet"]

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.28"
clap = { version = "4", features = ["derive"] }
fitsio = "0.21"
image = "0.25"
trash = "5"
anyhow = "1"
bayer = "0.1"

[profile.release]
opt-level = 3
